# test_gpu_openmp

./: CMakeLists.txt  LICENSE  hello_gpu_collapse.cpp
